Added hover on about

--- a/views/about.hbs
+++ b/views/about.hbs
@@ -29,56 +29,42 @@
         Computing Engineering at FEUP.</p>
 </div>
 
-<!--<div class="team-members">
-    <div class="inner">
-        <figure>
-            <img src="../images/clauds.jpeg" alt="Cláudia Guedes">
-            <figcaption class="font-weight-bold">Cláudia Guedes</figcaption>
-            <p class="contacts">up201505409@fe.up.pt</p>
-         
-
-
-
-        </figure>
-    </div>
-    <div class="inner">
-        <figure>
-            <img src="../images/davis.jpeg" alt="David Reis">
-            <figcaption class="font-weight-bold">David Reis</figcaption>
-            <p class="contacts">up201607927@fe.up.pt</p>
-        </figure>
-    </div>
-    <div class="inner">
-        <figure>
-            <img src="../images/mars.jpeg" alt="Marisa Oliveira">
-            <figcaption class="font-weight-bold">Marisa Oliveira</figcaption>
-            <p class="contacts">up201308594@fe.up.pt</p>
-        </figure>
-    </div>
-</div>-->
-
 <div class="team-members">
     <div class="inner">
         <figure>
-            <img src="../images/clauds.jpeg" alt="Cláudia Guedes">
+            <div class="image-person">
+                <img src="../images/clauds.jpeg" alt="Cláudia Guedes">
+                <div class="info-person">
+                    <a style="color:rgb(255, 255, 255, 0.9); text-decoration: none;" href="http://www.instagram.com/claudiaguedes.png"<i class="fab fa-instagram"></i></a>
+                    <a style="color:rgb(255, 255, 255, 0.9); text-decoration: none;" href="http://www.github.com/ClaudiaRaquelGuedes"<i class="fab fa-github"></i></a>
+                </div>
+            </div>
             <figcaption class="font-weight-bold">Cláudia Guedes</figcaption>
             <p class="contacts">up201505409@fe.up.pt</p>
-         
-
-
-
         </figure>
     </div>
     <div class="inner">
         <figure>
+            <div class="image-person">
             <img src="../images/davis.jpeg" alt="David Reis">
+                <div class="info-person">
+                    <a style="color:rgb(255, 255, 255, 0.9); text-decoration: none;" href="https://www.linkedin.com/in/davidreis7"<i class="fab fa-linkedin"></i></a>
+                    <a style="color:rgb(255, 255, 255, 0.9); text-decoration: none;" href="http://www.github.com/davidreis97"<i class="fab fa-github"></i></a>
+                </div>
+            </div>
             <figcaption class="font-weight-bold">David Reis</figcaption>
             <p class="contacts">up201607927@fe.up.pt</p>
         </figure>
     </div>
     <div class="inner">
         <figure>
+            <div class="image-person">
             <img src="../images/mars.jpeg" alt="Marisa Oliveira">
+                <div class="info-person">
+                    <a style="color:rgb(255, 255, 255, 0.9); text-decoration: none;" href="https://www.facebook.com/marisa.oliveira.988926"<i class="fab fa-facebook"></i></a>
+                    <a style="color:rgb(255, 255, 255, 0.9); text-decoration: none;" href="http://www.github.com/marisaDaniela"<i class="fab fa-github"></i></a>
+                </div>
+            </div>
             <figcaption class="font-weight-bold">Marisa Oliveira</figcaption>
             <p class="contacts">up201308594@fe.up.pt</p>
         </figure>
