--- a/public/style/about.css
+++ b/public/style/about.css
@@ -93,15 +93,42 @@ figcaption {
     color: rgba(255, 255, 255, 0.8);
 }
 
+.image-person {
+    position: relative;
+}
+
+.info-person{
+    opacity: 0;
+    margin-left:25px;
+    border-radius: 50%;
+    background-color: rgb(0,0,0,0.5);
+    position: absolute;
+    top:0;
+    width:150px;
+    height:100%;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-evenly;
+    transition: 0.15s;
+}
 
 
+.info-person:hover {
+    opacity: 1;
+}
 
+.fa-facebook{
+    font-size: 50px;
+}
 
+.fa-instagram{
+    font-size: 50px;
+}
 
+.fa-linkedin{
+    font-size: 50px;
+}
 
-
-
-
-
-
-
+.fa-github{
+    font-size: 50px;
+}
